--- a/src/AspNet.Security.OAuth.Introspection/project.json
+++ b/src/AspNet.Security.OAuth.Introspection/project.json
@@ -8,24 +8,21 @@
     "licenseUrl": "http://www.apache.org/licenses/LICENSE-2.0.html",
 
     "dependencies": {
-        "Microsoft.AspNet.Authentication": "1.0.0-*",
-
+        "JetBrains.Annotations": "10.1.2-eap",
+        "Microsoft.AspNetCore.Authentication": "1.0.0-*",
         "Microsoft.Extensions.Caching.Abstractions": "1.0.0-*",
-
-        "Microsoft.Extensions.NotNullAttribute.Sources": {
-            "type": "build",
-            "version": "1.0.0-*"
-        },
-
-        "Newtonsoft.Json": "7.0.1"
+        "Newtonsoft.Json": "8.0.2"
     },
 
     "frameworks": {
-        "dnx451": { },
-        "dnxcore50": {
+        "net451": { },
+
+        "dotnet5.4": {
             "dependencies": {
-                "System.Dynamic.Runtime": "4.0.11-*"
-            }
+                "System.Dynamic.Runtime": "4.0.0-*"
+            },
+
+            "imports": "portable-net451+win8"
         }
     }
 }
