--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ x64/
 build/
 [Bb]in/
 [Oo]bj/
+.build/
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
