--- a/src/AspNet.Security.OAuth.Introspection/project.json
+++ b/src/AspNet.Security.OAuth.Introspection/project.json
@@ -32,9 +32,10 @@
   },
 
   "dependencies": {
-    "JetBrains.Annotations": { "type": "build", "version": "10.1.4" },
-    "Microsoft.AspNetCore.Authentication": "1.0.0",
-    "Microsoft.Extensions.Caching.Abstractions": "1.0.0",
+    "JetBrains.Annotations": { "type": "build", "version": "10.2.1" },
+    "Microsoft.AspNetCore.Authentication": "1.1.0",
+    "Microsoft.Extensions.Caching.Abstractions": "1.1.0",
+    "NETStandard.Library": "1.6.1",
     "Newtonsoft.Json": "9.0.1"
   },
 
@@ -43,13 +44,8 @@
 
     "netstandard1.3": {
       "dependencies": {
-        "System.Dynamic.Runtime": "4.0.11"
-      },
-
-      "imports": [
-        "dotnet5.4",
-        "portable-net451+win8"
-      ]
+        "System.Dynamic.Runtime": "4.3.0"
+      }
     }
   }
 }
