--- a/src/Owin.Security.OAuth.Introspection/project.json
+++ b/src/Owin.Security.OAuth.Introspection/project.json
@@ -33,10 +33,11 @@
   },
 
   "dependencies": {
-    "JetBrains.Annotations": { "type": "build", "version": "10.1.4" },
-    "Microsoft.Extensions.Caching.Memory": "1.0.0",
-    "Microsoft.Extensions.Logging": "1.0.0",
-    "Microsoft.Owin.Security.Interop": "1.0.0",
+    "JetBrains.Annotations": { "type": "build", "version": "10.2.1" },
+    "Microsoft.Extensions.Caching.Memory": "1.1.0",
+    "Microsoft.Extensions.Logging": "1.1.0",
+    "Microsoft.Owin.Security.Interop": "1.1.0",
+    "NETStandard.Library": "1.6.1",
     "Newtonsoft.Json": "9.0.1"
   },
 
