Migrate Owin.Security.OAuth.Introspection and Owin.Security.OAuth.Validation to Katana 4 and IdentityModel 5

--- a/src/Owin.Security.OAuth.Introspection/Owin.Security.OAuth.Introspection.csproj
+++ b/src/Owin.Security.OAuth.Introspection/Owin.Security.OAuth.Introspection.csproj
@@ -16,14 +16,10 @@
     <PackageReference Include="JetBrains.Annotations" Version="$(JetBrainsVersion)" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="$(AspNetCoreVersion)" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="$(AspNetCoreVersion)" />
-    <PackageReference Include="Microsoft.IdentityModel.Protocol.Extensions" Version="$(IdentityModelVersion)" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="$(IdentityModelCoreVersion)" />
     <PackageReference Include="Microsoft.Owin.Security.Interop" Version="$(AspNetCoreVersion)" />
     <PackageReference Include="Newtonsoft.Json" Version="$(JsonNetVersion)" />
     <PackageReference Include="System.Net.Http" Version="$(NetHttpVersion)" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="System.IdentityModel" />
   </ItemGroup>
 
 </Project>
